policies/kyverno/clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cluster-signed-image-policy
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  rules:
    - name: require-and-verify-signed-images
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - image: "*"
          keyless:
            issuer: "https://signer.aws.amazon.com"
            subject: "my-container-signer"
